# vimium-browser

./: .gitignore  CMakeLists.txt  README.md
lib/include/glad/: glad.h
lib/src/: glad.c
src/: application.c  application.h  config.h  font.c  font.h  main.c  shader.c  shader.h  texture.c  texture.h  util.c  util.h
src/ui/: widget.c  widget.h
